# Optimizing-Fairness-in-Production-Planning

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/demonstrator/: example_geometry_line_mapping.py  example_human_factors.py  example_layer_one_output.py  example_order_data.py  example_start_timestamp.py  example_throughput_mapping.py  example_worker_availabilities.py  layer_one_order_to_line_solver.py  layer_two_worker_line_mdp.py  layer_two_worker_line_mdp_greedy.py  layer_two_worker_line_mdp_manual.py  layer_two_worker_line_mdp_mcts.py  layer_two_worker_line_mdp_rl.py
src/utils/: crf_timestamp_solver_time_conversion.py  fairwork_banner.py  generate_example_human_factors.py  generate_example_worker_availabilities.py  json_file_logger.py  logger.py
test/: test_banner.py  test_solver_time_to_timestamp.py  test_timestamp_to_solver_time.py
